# lit-sender-receiver

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/onehot_rnn_reconstruction_game/: cli.py  data.py  example_config.yaml  model.py
src/lit_sender_receiver/agents/: rnn_receiver.py  rnn_sender.py
src/lit_sender_receiver/base/: datamodule_base.py  dataset_base.py  game_base.py  receiver_base.py  sender_base.py  variable_types.py
src/lit_sender_receiver/utils/: message_utils.py
tests/: test_cuda_availability.py  test_message_utils.py  test_toy_games.py
